--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,65 +1,84 @@
-#background{
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
+#background {
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	font-size: 1rem;
 }
-#loginWrapper{
-    padding: 80px 0;
-    border-radius: 30px;
-    border: 1px solid black;
-    max-width: 500px;
-    width: 100%;
-    margin: auto;
-    background: white;
+#loginWrapper {
+	padding: 40px 0 40px;
+	border-radius: 30px;
+	border: 1px solid black;
+	max-width: 500px;
+	width: 100%;
+	margin: auto;
+	background: white;
 }
-#login{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 360px;
-    width: 90%;
-    margin: auto;
+.login {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	max-width: 360px;
+	width: 90%;
+	margin: auto;
 }
-#login .text{
-    margin-bottom: 10px;
-    font-weight: bold;
+.login .text {
+	margin-bottom: 10px;
+	font-weight: bold;
 }
-#login .center{
-    margin-bottom: 10px;
-    font-weight: bold;
-    text-align: center;
+.center {
+	margin-bottom: 10px;
+	font-weight: bold;
+	text-align: center;
 }
-.check{
-    height: 21px;
-    margin-bottom: 20px;
-    color: red;
+.check {
+	height: 21px;
+	color: red;
 }
-#login input{
-    border: 0;
-    border-bottom: 1px solid black;
-    outline: none;
-    font-size: inherit;
-    background: transparent;
+.login input {
+	border: 0;
+	border-bottom: 1px solid black;
+	outline: none;
+	font-size: inherit;
+	background: transparent;
 }
 
-#login .loginLink{
-    color: blue;
-    text-decoration: underline;
-    text-align: right;
-    font-size: 0.9rem;
-    margin-top: 4px;
+.login .loginLink {
+	color: blue;
+	text-decoration: underline;
+	text-align: right;
+	font-size: 0.9rem;
+	padding-top: 4px;
 }
-#login button{
-    border: 1px solid black;
-    border-radius: 20px;
-    background: #42ff42;
-    cursor: pointer;
-    height: 40px;
-    font-size: inherit;
-    outline: none;
+.login button {
+	border: 1px solid black;
+	border-radius: 20px;
+	background: #42ff42;
+	cursor: pointer;
+	height: 40px;
+	font-size: inherit;
+	outline: none;
 }
-.red{
-    background: red !important;
+.red {
+	background: red !important;
+}
+.oAuth {
+	border-bottom: 2px solid gray;
+	padding-bottom: 40px;
+	margin-bottom: 40px;
+}
+.googleLogin{
+    font-size: 1.1rem !important;
+    font-weight: bold !important;
+    color: black !important;
+    width: 100%;
+    border: 1px solid black !important;
+}
+.googleLogin:hover{
+    opacity: 0.7 !important;
+    background: rgb(190, 229, 241) !important;
+}
+.googleLogin div {
+    background-color: transparent !important;
+	padding: 0 10px !important;
 }
