--- a/src/components/Setting.css
+++ b/src/components/Setting.css
@@ -39,6 +39,7 @@
     color: black !important;
     width: 100%;
     outline: 0;
+    box-shadow: unset !important;
 }
 .googleLogout:hover{
     opacity: 1 !important;
