--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
 	font-size: 16px;
 	background: #f0f0f0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+	line-height: 120%;
 }
 
 a {
