--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -40,10 +40,11 @@
 .postContent {
 	padding: 0 8px 20px;
 }
-
-.writeComment {
+.EmojiDiv{
 	border-top: 2px dotted green;
 	padding: 20px 8px 0px;
+}
+.writeComment {
 	display: flex;
 	align-items: center;
 }
