--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,11 +1,11 @@
-#background {
+.background {
 	display: flex;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
 	font-size: 1rem;
 }
-#loginWrapper {
+.loginWrapper {
 	padding: 40px 0 40px;
 	border-radius: 30px;
 	border: 1px solid black;
@@ -43,6 +43,7 @@
 	vertical-align: text-bottom;
 }
 .center {
+	width: 100%;
 	font-size: 1rem;
 	margin-bottom: 10px;
 	font-weight: bold;
