--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -11,8 +11,8 @@
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    position: absolute;
-    z-index: 10;
+    position: relative;
+    z-index: 15;
     top: 0;
     left: -312px;
 
