--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,10 +1,11 @@
 #body{
     position: relative;
-    top: 0;
+    top: 48px;
     left: 0;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin: auto;
     width: 100%;
     height: calc(100% - 48px);
     overflow: auto;
