--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ body {
 	background: #f0f0f0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	line-height: 120%;
-	overflow: hidden;
+	overflow: auto;
 }
 
 a {
