fix body styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ textarea {
 }
 
 .slideMenu {
-	transition: width 0.5s ease, left 0.5s ease;
+	transition: width 0.5s ease, left 0.5s ease, box-shadow 0.5s ease;
 }
 
 @media (min-width: 1280px) {
