Guide, Menus: apply material

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,8 @@ body {
 
   button {
 		border-radius: 12px;
+		text-transform: unset;
+		line-height: unset;
   }
   .MuiButton-root {
 		min-width: unset;
