--- a/src/components/Guide.scss
+++ b/src/components/Guide.scss
@@ -10,7 +10,7 @@
 #guideWrapper {
   overflow-x: hidden;
   overflow-y: auto;
-
+  min-width: 300px;
   width: 300px;
   margin-top: 8px;
   background: white;
@@ -62,6 +62,15 @@
   flex-direction: column;
   padding: 8px 0 8px;
   border-top: 1px solid green;
+  button{
+    font-size: 1rem;
+    text-align: left;
+    font-weight: bold;
+    width: 100%;
+  }
+  .MuiButtonBase-root{
+    justify-content: space-between;
+  }
 }
 
 .menuLink {
