--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,7 @@ body {
   height: 100%;
 
   button {
+		text-align: left;
 		border-radius: 12px;
 		text-transform: unset;
 		line-height: unset;
