Login, Post: fix Button contentedPrimary

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,12 @@ body {
 	.MuiButton-text {
 		padding: 4px 6px;
 	}
+	.MuiButton-containedPrimary{
+		color: black;
+		&:hover{
+			background-color: #3bdb3b;
+		} 
+	}
 
 	a {
 		cursor: pointer;
@@ -58,21 +64,21 @@ body {
 		user-select: none;
 	}
 	
-	textarea {
-		width: 100%;
-		overflow: visible;
-		resize: none;
-		font-size: 16px;
-		font: inherit;
-		padding: 0;
-		border: 1px solid gray;
-		&:focus {
-			outline: 1px solid green;
-		}
-	}
-
 	.slideMenu {
 		transition: width 0.5s ease, left 0.5s ease, box-shadow 0.5s ease;
+	}
+}
+
+textarea {
+	width: 100%;
+	overflow: visible;
+	resize: none;
+	font-size: 16px;
+	font: inherit;
+	padding: 0;
+	border: 1px solid gray;
+	&:focus {
+		outline: 1px solid green;
 	}
 }
 
