--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -81,7 +81,7 @@
 	padding: 6px 6px;
 	border: 0px solid black;
 	border-radius: 5px;
-	background: #84ff84;
+	background: #84ff84 !important;
 	cursor: pointer;
 	font-size: inherit;
 	outline: none;
