--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,44 +1,46 @@
-#headerWrapper{
-    position: fixed;
-    z-index: 20;
-    width: 100%;
-    background: rgb(180, 255, 180);
-    box-shadow: 0px 3px 10px rgba(0,0,0,.4);
+#headerWrapper {
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  background: rgb(180, 255, 180);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  transition: all linear 0.3s;
 }
-#header{
-    width: 100%;
-    padding: 0px 8px;
-    height: 48px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #b4ffb4;
-}
-
-.menu{
-    svg{
-        color: #606060;
-        font-size: 30px;
-    }
+#header {
+  width: 100%;
+  padding: 0px 8px;
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #b4ffb4;
 }
 
-.profile{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    position: relative;
-    top: 2px;
+.menu {
+  svg {
+    color: #606060;
+    font-size: 30px;
+  }
 }
 
-#title{
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    font-size: 1.2rem;
-    font-weight: bold;
+.profile {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: relative;
+  top: 2px;
 }
 
-#logo{
-    width: 32px;
-    height: 32px;
+#title {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+#logo {
+  width: 32px;
+  height: 32px;
 }
