Fix style of ellipsis lists
line-height: 1.2rem;
height: 2.4rem;
overflow: hidden;
text-overflow: ellipsis;
display: -webkit-box;
-webkit-line-clamp: 2;
-webkit-box-orient: vertical;

--- a/src/components/CommentLists.scss
+++ b/src/components/CommentLists.scss
@@ -21,6 +21,11 @@
 }
 .recentComment .postBody {
   height: 1.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 .recentComment .username {
   font-weight: bold;
