--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -72,4 +72,7 @@
   height: 2.4rem;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
