--- a/src/components/Guide.scss
+++ b/src/components/Guide.scss
@@ -24,6 +24,14 @@
     left: -300px;
   }
 }
+@media (min-width: 500px) {
+  #guideWrapper {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 300px;
+  }
+}
 #avatar {
   width: 100%;
   padding: 16px;
