--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ body {
   }
 
   .slideMenu {
-    transition: width 0.5s ease, left 0.5s ease, box-shadow 0.5s ease;
+    transition: max-width 0.5s ease, width 0.5s ease, left 0.5s ease, box-shadow 0.5s ease;
   }
 }
 
