Use scroll-behavior: smooth

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   line-height: 120%;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 #app {
