Fix style border-radius of button and a

--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -22,7 +22,7 @@
   width: 40px;
   height: 40px;
   background: rgba(180, 255, 180, 0.6);
-  border-radius: 50%;
+  border-radius: 50% !important;
   box-shadow: 5px 5px 5px 0 grey;
   right: 8px;
   cursor: pointer;
