--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color';
+
 * {
   box-sizing: border-box;
 }
@@ -6,9 +8,9 @@ body {
   height: 100%;
   width: 100%;
   margin: 0px;
-  color: #202020;
+  color: $oc-gray-9;
   font-size: 16px;
-  background: #f0f0f0;
+  background: $oc-gray-1;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   line-height: 120%;
   overflow: auto;
@@ -37,6 +39,7 @@ body {
     color: black;
     &:hover {
       background-color: #3bdb3b;
+      background-color: $oc-green-5;
     }
   }
 
