--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -40,7 +40,7 @@
     padding-top: 4px;
   }
   button {
-    border: 1px solid black;
+    border: 0;
     border-radius: 20px;
     background: #42ff42;
     cursor: pointer;
