--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -75,37 +75,39 @@
   padding-right: 8px;
   font-size: 0.8rem;
 }
-.commentButton,
-.loginButton {
-  display: inline-block;
-  padding: 6px 6px;
-  border: 0px solid black;
-  border-radius: 5px;
-  background: #84ff84 !important;
-  cursor: pointer;
-  font-size: inherit;
-  outline: none;
-  cursor: pointer;
-}
-.commentButton {
-  margin-left: 8px;
-}
+.post {
+  .commentButton,
+  .loginButton {
+    display: inline-block;
+    padding: 6px 6px;
+    border: 0px solid black;
+    border-radius: 5px;
+    background-color: #84ff84;
+    cursor: pointer;
+    font-size: inherit;
+    outline: none;
+    cursor: pointer;
+  }
+  .commentButton {
+    margin-left: 8px;
+  }
 
-.postButtons {
-  text-align: right;
-  font-size: 0.8rem;
-}
-.postButtons button,
-.postButtons a {
-  display: inline-block;
-  padding: 6px 6px;
-  border: 0px solid black;
-  border-radius: 5px;
-  background: #84ff84;
-  cursor: pointer;
-  font-size: inherit;
-  outline: none;
-  cursor: pointer;
+  .postButtons {
+    text-align: right;
+    font-size: 0.8rem;
+  }
+  .postButtons button,
+  .postButtons a {
+    display: inline-block;
+    padding: 6px 6px;
+    border: 0px solid black;
+    border-radius: 5px;
+    background: #84ff84;
+    cursor: pointer;
+    font-size: inherit;
+    outline: none;
+    cursor: pointer;
+  }
 }
 
 #comments {
