--- a/src/components/Comment.scss
+++ b/src/components/Comment.scss
@@ -17,5 +17,5 @@
   border: 1px solid gray !important;
 }
 .updateMode:focus {
-  outline: 1px solid green !important;
+  outline: 1px solid blue !important;
 }
