--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color';
+
 #background {
   display: flex;
   height: 100%;
@@ -42,7 +44,8 @@
   button {
     border: 0;
     border-radius: 20px;
-    background: #42ff42;
+    background: $oc-indigo-5;
+    color: white;
     cursor: pointer;
     height: 40px;
     text-align: center !important;
