--- a/src/components/Guide.scss
+++ b/src/components/Guide.scss
@@ -67,11 +67,15 @@
   flex-direction: column;
   padding: 8px 0 8px;
   border-top: 1px solid green;
+  a{
+    transition: all 0.3s ease;
+  }
   button {
     font-size: 1rem;
     text-align: left;
     font-weight: bold;
     width: 100%;
+    
   }
   .MuiButtonBase-root {
     justify-content: space-between;
