--- a/src/components/Menus.scss
+++ b/src/components/Menus.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color';
+
 .list {
   display: flex;
   justify-content: space-between;
@@ -6,14 +8,14 @@
   }
 }
 .list:hover {
-  background: #42ff42;
+  background: $oc-indigo-3;
   cursor: pointer;
 }
 .activeList {
-  background: #76ff76;
+  background: $oc-indigo-1;
 }
 .activeListManual {
-  background: #76ff76;
+  background: $oc-indigo-1;
 }
 .subList .menuName {
   padding-left: 20px;
