--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color';
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -54,11 +56,15 @@
   font-size: 0.8rem;
   margin-right: 10px;
   width: 60px;
-}
-.commentProfile img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  svg {
+    font-size: 3.4rem;
+    color: gray;
+  }
 }
 .commentUsername {
   font-size: 0.8rem;
@@ -66,9 +72,9 @@
 .commentContent {
   width: calc(100% - 60px);
   font-size: 0.8rem;
-}
-.commentContent textarea {
-  font-size: 0.9rem;
+  textarea {
+    font-size: 0.9rem;
+  }
 }
 .commentButtons {
   text-align: right;
@@ -82,8 +88,8 @@
     padding: 6px 6px;
     border: 0px solid black;
     border-radius: 5px;
-    background-color: #84ff84;
-    cursor: pointer;
+    background: $oc-indigo-5;
+    color: white !important;
     font-size: inherit;
     outline: none;
     cursor: pointer;
@@ -102,11 +108,11 @@
     padding: 6px 6px;
     border: 0px solid black;
     border-radius: 5px;
-    background: #84ff84;
+    background: $oc-indigo-5;
+    color: white !important;
     cursor: pointer;
     font-size: inherit;
     outline: none;
-    cursor: pointer;
   }
 }
 
