--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -51,13 +51,15 @@
 }
 
 #loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  background: white;
+  min-height: 100vh;
+  background: rgba(0,0,0,0.5);
 }
 
 #fakeTextarea {
